fixed autofill to 100% height, aligned and made sure items were in view

--- a/style.css
+++ b/style.css
@@ -5,14 +5,17 @@ body {
 
 #main-elements {
     background-color: lightgray;
-    align-items: center;
-    min-width: 400px;
+    min-width: 400px; 
     /* min-height: 600px; */
     border: 2px solid black;
     display: flex;
     flex-direction: column;
+    height: 100vh;
     align-items: center;
-    flex-grow: 1;
+    /*position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;*/
 }
 
 #header {
@@ -24,6 +27,9 @@ body {
     background-color: antiquewhite;
     border: 2px solid black;
     height: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #top-space {
@@ -39,6 +45,8 @@ body {
     width: 50%;
     height: 50%; */
     border: 2px solid black;
+    width: 272px;
+    height: 92px;
 }
 
 #logo-img {
@@ -68,14 +76,16 @@ body {
     flex-direction: row;
     justify-content: center;
     background-color: bisque;
-    */
 }
+*/
 
 #mid {
     background-color: aquamarine;
     border: 2px solid black;
     display: flex;
-    
+    flex-direction: column;
+    align-items: center;
+    min-height: 150px;
 }
 
 
@@ -84,15 +94,16 @@ body {
     background-color: blanchedalmond;
     /*min-width: 380px;*/
     margin: 0% 30%;
+    max-height: 80px;
     /*min-height: 100px;*/
 }
 
 #search-bar {
     /*width: 70%;*/
     /*including width doesn't follow to justification*/
+    /*position: absolute; *//*adding in position took it out of center and out of div container*/
     border-radius: 15px;
-    height: 100%;
-    width: 100%;
+    max-height: 100px;
     background-color:aquamarine;
     /*display: block;
     justify-content: center;*/
@@ -162,4 +173,7 @@ input {
 #footer {
     background-color: beige;
     border: 2px solid black;
+    position: absolute;
+    bottom: 0;
+    width: 100;
 }
